--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-avatar": "^5.0.1",
     "react-beautiful-dnd": "^13.1.0",
@@ -17,7 +18,8 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
     "tailwind-react-datepicker": "^1.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
