feat cypress e2e testing. Login and project page

--- a/package.json
+++ b/package.json
@@ -36,12 +36,19 @@
     "build-prod": "dotenv -e .env.production react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
+    "env": {
+      "cypress/global": true
+    },
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "plugins": [
+      "cypress"
     ]
   },
   "browserslist": {
@@ -58,6 +65,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "cypress": "^10.7.0",
+    "cypress-localstorage-commands": "^2.2.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
